CHKN-178 mocha test 실패 코드 수정
